bat.bool1.in1020.In1020.scala.error
Erreur de compilation :
In1020:68: error: type mismatch;
 found   : Unit
 required: Boolean
  if (b==20){
  ^