bat.bool1.in1020.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
  if (a==10){
    return true 
  }  
  if (a==11){
    return true 
  }
  if (a==12){
    return true 
  }
  if (a==13){
    return true 
  }
  if (a==14){
    return true 
  }
  if (a==15){
    return true 
  }
  if (a==16){
    return true 
  }
  if (a==17){
    return true 
  }
  if (a==18){
    return true 
  }
  if (a==19){
    return true 
  }
  if (a==20){
    return true 
  }
  if (b==10){
    return true 
  }
  if (b==11){
    return true 
  }
  if (b==12){
    return true 
  }
  if (b==13){
    return true 
  }
  if (b==13){
    return true 
  }
  if (b==14){
    return true 
  }
  if (b==15){
    return true 
  }
  if (b==16){
    return true 
  }
  if (b==17){
    return true 
  }
  if (b==18){
    return true 
  }
  if (b==19){
    return true 
  }
  if (b==20){
    return true 
  }
}